fixed create ImageView, put them in right layout

--- a/app/src/main/res/layout/fragment_categories_event.xml
+++ b/app/src/main/res/layout/fragment_categories_event.xml
@@ -4,32 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools">
 
 
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/twoFragmentHeight">
 
-
-        <ImageView
-            android:id="@+id/categoriesEventCreateEventIV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/categoriesEventCategoryRV"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.967"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"
-            app:srcCompat="@drawable/ic_baseline_create_24px" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/categoriesEventCategoryRV"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/createInCatOrSubcategoryRVHeight"
+            android:layout_height="@dimen/twoFragmentHeight"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
@@ -42,7 +22,6 @@
 
         </android.support.v7.widget.RecyclerView>
 
-    </android.support.constraint.ConstraintLayout>
 
 
 </layout>
