--- a/app/src/main/res/layout/fragment_groups_in_subcategory.xml
+++ b/app/src/main/res/layout/fragment_groups_in_subcategory.xml
@@ -23,7 +23,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/groupsInSubcategoryGroupRV"
             android:layout_width="match_parent"
-            android:layout_height="470dp"
+            android:layout_height="@dimen/personalFeedRVHeight"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
