fixed constraints in fragment_event_feed and fragment_group_feed layouts also set the databinding for fragment_group_feed and implemented a getNumberOfMembersAsString method in itemGroupViewModel

--- a/app/src/main/res/layout/fragment_event_feed.xml
+++ b/app/src/main/res/layout/fragment_event_feed.xml
@@ -23,7 +23,7 @@
 
             <TextView
                 android:id="@+id/participantsTV"
-                android:layout_width="wrap_content"
+                android:layout_width="4dp"
                 android:layout_height="27dp"
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="8dp"
@@ -32,12 +32,11 @@
                 android:layout_marginStart="8dp"
                 android:gravity="center"
                 android:text="@{itemEventViewModel.numberOfParticipants}"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/creationDateEventTV"
                 app:layout_constraintEnd_toStartOf="@+id/participateBt"
-                app:layout_constraintHorizontal_bias="0.505"
                 app:layout_constraintStart_toEndOf="@+id/creationDateEventTV"
-                app:layout_constraintTop_toBottomOf="@+id/eventDescriptionTV"
-                app:layout_constraintVertical_bias="0.789" />
+                app:layout_constraintTop_toTopOf="@+id/creationDateEventTV"
+                app:layout_constraintVertical_bias="0.0" />
 
             <Button
                 android:id="@+id/participateBt"
@@ -46,26 +45,23 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
-                android:layout_marginTop="24dp"
                 android:text="Button"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/createPostInEventIV"
-                app:layout_constraintVertical_bias="0.733" />
+                app:layout_constraintTop_toTopOf="@+id/participantsTV" />
 
             <ImageView
                 android:id="@+id/createPostInEventIV"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
-                android:layout_marginLeft="60dp"
+                android:layout_marginLeft="8dp"
                 android:layout_marginRight="8dp"
-                android:layout_marginStart="60dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.733"
-                app:layout_constraintStart_toEndOf="@+id/eventPictureIV"
+                app:layout_constraintStart_toStartOf="@+id/participateBt"
                 app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@drawable/ic_baseline_create_24px" />
 
@@ -74,47 +70,42 @@
                 android:layout_width="wrap_content"
                 android:layout_height="27dp"
                 android:layout_marginBottom="8dp"
-                android:layout_marginLeft="36dp"
-                android:layout_marginStart="36dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginLeft="84dp"
+                android:layout_marginStart="84dp"
+                android:layout_marginTop="24dp"
                 android:gravity="center"
                 android:text="@{itemEventViewModel.dateAsString}"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/creatorOfEventTV"
                 app:layout_constraintTop_toBottomOf="@+id/eventDescriptionTV"
-                app:layout_constraintVertical_bias="0.733" />
+                app:layout_constraintVertical_bias="0.428" />
 
             <TextView
                 android:id="@+id/creatorOfEventTV"
-                android:layout_width="wrap_content"
+                android:layout_width="5dp"
                 android:layout_height="27dp"
                 android:layout_marginBottom="8dp"
-                android:layout_marginLeft="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginStart="8dp"
                 android:gravity="center"
                 android:text="@{itemEventViewModel.creator.name}"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toBottomOf="@+id/creationDateEventTV"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/eventDescriptionTV"
-                app:layout_constraintVertical_bias="0.733" />
+                app:layout_constraintTop_toTopOf="@+id/creationDateEventTV"
+                app:layout_constraintVertical_bias="0.0" />
 
             <ImageView
                 android:id="@+id/eventPictureIV"
                 android:layout_width="@dimen/pictureRVSize"
                 android:layout_height="@dimen/pictureRVSize"
-                android:layout_marginEnd="8dp"
-                android:layout_marginLeft="8dp"
-                android:layout_marginRight="8dp"
-                android:layout_marginStart="8dp"
-                android:layout_marginTop="8dp"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginTop="16dp"
+                app:layout_constraintEnd_toEndOf="@+id/eventDescriptionTV"
+                app:layout_constraintStart_toStartOf="@+id/eventDescriptionTV"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/eventDescriptionTV"
-                android:layout_width="wrap_content"
+                android:layout_width="5dp"
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="8dp"
                 android:layout_marginLeft="8dp"
