--- a/app/src/main/res/layout/fragment_group_feed.xml
+++ b/app/src/main/res/layout/fragment_group_feed.xml
@@ -3,120 +3,113 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <data>
+
+        <variable
+            name="itemGroupViewModel"
+            type="com.example.asus.example.mvvm.ViewModel.ItemGroupViewModel" />
+    </data>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/oneFragmentHeight"
         android:orientation="vertical"
         tools:context=".mvvm.View.GroupFeedFragment">
 
-    <android.support.constraint.ConstraintLayout
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/itemRVHeight"
-        android:background="@color/graylight">
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/itemRVHeight"
+            android:background="@color/graylight">
 
-        <TextView
-            android:id="@+id/memberInGroupTV"
-            android:layout_width="wrap_content"
-            android:layout_height="27dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginTop="8dp"
-            android:gravity="center"
-            app:layout_constraintBottom_toBottomOf="parent"
-            android:text="sd"
-            app:layout_constraintEnd_toStartOf="@+id/joinGroupBt"
-            app:layout_constraintHorizontal_bias="0.685"
-            app:layout_constraintStart_toEndOf="@+id/creationDateOfGroupTV"
-            app:layout_constraintTop_toBottomOf="@+id/groupDescriptionTV"
-            app:layout_constraintVertical_bias="1.0" />
+            <TextView
+                android:id="@+id/memberInGroupTV"
+                android:layout_width="19dp"
+                android:layout_height="27dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:gravity="center"
+                android:text="@{itemGroupViewModel.numberOfMembersAsString}"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/joinGroupBt"
+                app:layout_constraintStart_toEndOf="@+id/creatorOfGroupTV"
+                app:layout_constraintTop_toBottomOf="@+id/groupDescriptionTV"
+                app:layout_constraintVertical_bias="0.636" />
 
-        <Button
-            android:id="@+id/joinGroupBt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="4dp"
-            android:layout_marginRight="4dp"
-            android:layout_marginTop="8dp"
-            android:text="Button"
-            android:textSize="12sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/createPostInGroupIV"
-            app:layout_constraintVertical_bias="1.0" />
+            <Button
+                android:id="@+id/joinGroupBt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="4dp"
+                android:layout_marginRight="4dp"
+                android:text="Button"
+                android:textSize="12sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/memberInGroupTV" />
 
-        <ImageView
-            android:id="@+id/createPostInGroupIV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="60dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="60dp"
-            android:layout_marginTop="16dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.733"
-            app:layout_constraintStart_toEndOf="@+id/groupPictureIV"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_baseline_create_24px" />
+            <ImageView
+                android:id="@+id/createPostInGroupIV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="@+id/joinGroupBt"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/ic_baseline_create_24px" />
 
-        <TextView
-            android:id="@+id/creationDateOfGroupTV"
-            android:layout_width="wrap_content"
-            android:layout_height="27dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="32dp"
-            android:layout_marginStart="32dp"
-            android:gravity="center"
-            android:text="Date"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/creatorOfGroupTV" />
 
-        <TextView
-            android:id="@+id/creatorOfGroupTV"
-            android:layout_width="wrap_content"
-            android:layout_height="27dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="8dp"
-            android:gravity="center"
-            android:text="creator"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0" />
+            <TextView
+                android:id="@+id/creatorOfGroupTV"
+                android:layout_width="45dp"
+                android:layout_height="22dp"
+                android:layout_marginBottom="8dp"
+                android:layout_marginLeft="36dp"
+                android:layout_marginStart="36dp"
+                android:gravity="center"
+                android:text="@{itemGroupViewModel.creator}"
+                app:layout_constraintBottom_toBottomOf="@+id/memberInGroupTV"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="@+id/memberInGroupTV"
+                app:layout_constraintVertical_bias="0.0" />
 
-        <ImageView
-            android:id="@+id/groupPictureIV"
-            android:layout_width="@dimen/pictureRVSize"
-            android:layout_height="@dimen/pictureRVSize"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            <ImageView
+                android:id="@+id/groupPictureIV"
+                android:layout_width="@dimen/pictureRVSize"
+                android:layout_height="@dimen/pictureRVSize"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="4dp"
+                app:layout_constraintEnd_toEndOf="@+id/groupDescriptionTV"
+                app:layout_constraintStart_toStartOf="@+id/groupDescriptionTV"
+                app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:id="@+id/groupDescriptionTV"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
-            android:text="Description"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.501"
-            app:layout_constraintStart_toStartOf="parent"
-            android:gravity="center"
-            app:layout_constraintTop_toBottomOf="@+id/groupPictureIV" />
-    </android.support.constraint.ConstraintLayout>
+            <TextView
+                android:id="@+id/groupDescriptionTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
+                android:gravity="center"
+                android:text="@{itemGroupViewModel.description}"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.501"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/groupPictureIV" />
+        </android.support.constraint.ConstraintLayout>
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/groupFeedPostRV"
