fixed Constraints in layout files regarding creating something new

--- a/app/src/main/res/layout/fragment_new_event_in_category.xml
+++ b/app/src/main/res/layout/fragment_new_event_in_category.xml
@@ -24,18 +24,17 @@
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
+            android:layout_marginTop="8dp"
             android:onClick="@{()->itemCategoryViewModel.onCreateEventClick()}"
             android:text="@string/create"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.501"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/newEventInCategoryImageUrlET"
-            app:layout_constraintVertical_bias="0.715" />
+            app:layout_constraintTop_toBottomOf="@+id/newEventInCategoryDateET" />
 
         <EditText
             android:id="@+id/newEventInCategoryNameET"
-            android:text="@={itemCategoryViewModel.inputName}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
@@ -44,59 +43,59 @@
             android:layout_marginStart="44dp"
             android:layout_marginTop="52dp"
             android:hint="@string/eventName"
+            android:text="@={itemCategoryViewModel.inputName}"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="0.018"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/newEventInCategoryDescriptionET"
-            android:text="@={itemCategoryViewModel.inputDesc}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="44dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="44dp"
+            android:layout_marginEnd="124dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="124dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="56dp"
             android:ems="10"
             android:hint="@string/eventDescription"
             android:inputType="textMultiLine"
+            android:text="@={itemCategoryViewModel.inputDesc}"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/newEventInCategoryNameET"
             app:layout_constraintTop_toBottomOf="@+id/newEventInCategoryNameET" />
 
         <EditText
             android:id="@+id/newEventInCategoryImageUrlET"
-            android:text="@={itemCategoryViewModel.inputImageUrl}"
-            android:layout_width="wrap_content"
+            android:layout_width="65dp"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="44dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="44dp"
-            android:layout_marginTop="48dp"
+            android:layout_marginEnd="268dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="268dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="56dp"
             android:hint="@string/eventImageUrl"
+            android:text="@={itemCategoryViewModel.inputImageUrl}"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.042"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/newEventInCategoryDescriptionET"
             app:layout_constraintTop_toBottomOf="@+id/newEventInCategoryDescriptionET" />
 
         <EditText
             android:id="@+id/newEventInCategoryDateET"
-            android:text="@={itemCategoryViewModel.inputDate}"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="44dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="44dp"
-            android:layout_marginTop="40dp"
+            android:layout_marginEnd="272dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="272dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="32dp"
             android:hint="@string/eventDate"
+            android:text="@={itemCategoryViewModel.inputDate}"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/newEventInCategoryImageUrlET"
             app:layout_constraintTop_toBottomOf="@+id/newEventInCategoryImageUrlET" />
 
 
