--- a/app/src/main/res/layout/fragment_new_group_in_category.xml
+++ b/app/src/main/res/layout/fragment_new_group_in_category.xml
@@ -46,32 +46,32 @@
             android:id="@+id/newGroupInCategoryDescriptionET"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginEnd="128dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="128dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="92dp"
+            android:layout_marginTop="88dp"
             android:ems="10"
             android:hint="@string/groupDescription"
             android:inputType="textMultiLine"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.209"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/newGroupInCategoryNameET"
             app:layout_constraintTop_toBottomOf="@+id/newGroupInCategoryNameET" />
 
         <EditText
             android:id="@+id/newGroupInCategoryImageUrlET"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="40dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginEnd="276dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="276dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="116dp"
+            android:layout_marginTop="120dp"
             android:hint="@string/groupImageUrl"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.105"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="@+id/newGroupInCategoryDescriptionET"
             app:layout_constraintTop_toBottomOf="@+id/newGroupInCategoryDescriptionET" />
     </android.support.constraint.ConstraintLayout>
 </layout>
