--- a/app/src/main/res/layout/fragment_new_event_in_subcategory.xml
+++ b/app/src/main/res/layout/fragment_new_event_in_subcategory.xml
@@ -20,16 +20,18 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="4dp"
+            android:layout_marginEnd="140dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="140dp"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:text="@string/create"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.985"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/newEventInSubcategoryImageUrlET" />
+            app:layout_constraintTop_toBottomOf="@+id/newEventInSubcategoryImageUrlET"
+            app:layout_constraintVertical_bias="0.419" />
 
         <EditText
             android:id="@+id/newEventInSubcategoryNameET"
@@ -50,32 +52,30 @@
             android:id="@+id/newEventInSubcategoryDescriptionET"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="36dp"
-            android:layout_marginRight="8dp"
+            android:layout_marginEnd="128dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="128dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="108dp"
+            android:layout_marginTop="112dp"
             android:ems="10"
             android:hint="@string/eventDescription"
             android:inputType="textMultiLine"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.196"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/newEventInSubcategoryNameET"
             app:layout_constraintTop_toBottomOf="@+id/newEventInSubcategoryNameET" />
 
         <EditText
             android:id="@+id/newEventInSubcategoryImageUrlET"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="36dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="36dp"
-            android:layout_marginTop="100dp"
+            android:layout_marginEnd="280dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="280dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="104dp"
             android:hint="@string/eventImageUrl"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.047"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/newEventInSubcategoryDescriptionET"
             app:layout_constraintTop_toBottomOf="@+id/newEventInSubcategoryDescriptionET" />
     </android.support.constraint.ConstraintLayout>
 </layout>
