--- a/app/src/main/res/layout/fragment_new_group_in_subcategory.xml
+++ b/app/src/main/res/layout/fragment_new_group_in_subcategory.xml
@@ -51,31 +51,28 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="8dp"
-            android:layout_marginLeft="28dp"
             android:layout_marginRight="8dp"
-            android:layout_marginStart="28dp"
-            android:layout_marginTop="132dp"
+            android:layout_marginTop="140dp"
             android:ems="10"
             android:hint="@string/groupDescription"
             android:inputType="textMultiLine"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/newGroupInSubcategoryNameET"
             app:layout_constraintTop_toBottomOf="@+id/newGroupInSubcategoryNameET" />
 
         <EditText
             android:id="@+id/newGroupInSubcategoryImageUrlET"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginLeft="28dp"
-            android:layout_marginRight="8dp"
-            android:layout_marginStart="28dp"
-            android:layout_marginTop="92dp"
+            android:layout_marginEnd="288dp"
+            android:layout_marginLeft="8dp"
+            android:layout_marginRight="288dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="88dp"
             android:hint="@string/groupImageUrl"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/newGroupInSubcategoryDescriptionET"
             app:layout_constraintTop_toBottomOf="@+id/newGroupInSubcategoryDescriptionET" />
     </android.support.constraint.ConstraintLayout>
 </layout>
