--- a/app/src/main/res/layout/item_post.xml
+++ b/app/src/main/res/layout/item_post.xml
@@ -22,13 +22,12 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/fragmentThumbsUpIV"
         app:layout_constraintEnd_toStartOf="@+id/fragmentThumbsUpIV"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/fragmentPictureOfUserWhoPostedIV"
-        app:layout_constraintVertical_bias="0.909"
+        app:layout_constraintTop_toTopOf="@+id/fragmentThumbsUpIV"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/ic_thumb_down_icon" />
 
     <ImageView
@@ -36,28 +35,26 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="68dp"
-        android:layout_marginStart="68dp"
+        android:layout_marginLeft="60dp"
+        android:layout_marginStart="60dp"
         android:layout_marginTop="44dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/fragmentPictureOfUserWhoPostedIV"
+        app:layout_constraintVertical_bias="0.0"
         app:srcCompat="@drawable/ic_thumb_ub_icon" />
 
     <TextView
         android:id="@+id/datePostTV"
         android:layout_width="90dp"
-        android:layout_height="27dp"
-        android:layout_marginBottom="12dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginStart="8dp"
+        android:layout_height="26dp"
+        android:layout_marginEnd="16dp"
+        android:layout_marginRight="16dp"
         android:layout_marginTop="8dp"
         android:text="@{itemPostViewModel.dateAsString}"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toBottomOf="@+id/fragmentWherePostedTV"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toEndOf="@+id/fragmentWherePostedTV"
-        app:layout_constraintTop_toBottomOf="@+id/fragmentPostTV"
+        app:layout_constraintTop_toTopOf="@+id/fragmentWherePostedTV"
         app:layout_constraintVertical_bias="1.0" />
 
     <TextView
@@ -65,8 +62,8 @@
         android:layout_width="90dp"
         android:layout_height="27dp"
         android:layout_marginBottom="8dp"
-        android:layout_marginLeft="12dp"
-        android:layout_marginStart="12dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@{itemPostViewModel.ownerName}"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -78,12 +75,10 @@
         android:id="@+id/fragmentNameOfUserWhoPostedTV"
         android:layout_width="70dp"
         android:layout_height="27dp"
-        android:layout_marginLeft="28dp"
-        android:layout_marginStart="28dp"
         android:layout_marginTop="8dp"
         android:text="@{itemPostViewModel.numberOfLikes}"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/fragmentThumbsUpIV"
+        app:layout_constraintStart_toStartOf="@+id/fragmentPostTV"
         app:layout_constraintTop_toBottomOf="@+id/fragmentPostTV"
         app:layout_constraintVertical_bias="0.0" />
 
