--- a/app/src/main/res/layout/fragment_new_event_in_category.xml
+++ b/app/src/main/res/layout/fragment_new_event_in_category.xml
@@ -92,6 +92,7 @@
             android:layout_marginStart="8dp"
             android:layout_marginTop="32dp"
             android:hint="@string/eventDate"
+            android:inputType="date"
             android:text="@={itemCategoryViewModel.inputDate}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
