--- a/app/src/main/res/layout/fragment_group_feed.xml
+++ b/app/src/main/res/layout/fragment_group_feed.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/white">
 
     <data>
 
@@ -75,7 +76,7 @@
                 android:layout_marginLeft="36dp"
                 android:layout_marginStart="36dp"
                 android:gravity="center"
-                android:text="@{itemGroupViewModel.creator}"
+                android:text="@{itemGroupViewModel.creatorAsString}"
                 app:layout_constraintBottom_toBottomOf="@+id/memberInGroupTV"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="@+id/memberInGroupTV"
