--- a/app/src/main/res/layout/item_group.xml
+++ b/app/src/main/res/layout/item_group.xml
@@ -20,31 +20,30 @@
             android:layout_width="wrap_content"
             android:layout_height="@dimen/pictureRVSize"
             android:layout_marginBottom="8dp"
-            android:layout_marginEnd="212dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="212dp"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="8dp"
+            android:layout_marginEnd="8dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginRight="8dp"
+            android:layout_marginStart="24dp"
             android:gravity="center"
             android:text="@{itemGroupViewModel.name}"
-            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintBottom_toBottomOf="@+id/groupPictureIV"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toEndOf="@+id/groupPictureIV"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@+id/groupPictureIV"
+            app:layout_constraintVertical_bias="0.0" />
 
         <ImageView
             android:id="@+id/groupPictureIV"
+            imageUrl="@{itemGroupViewModel.imageURl}"
             android:layout_width="@dimen/pictureRVSize"
             android:layout_height="@dimen/pictureRVSize"
             android:layout_marginBottom="8dp"
-            android:layout_marginLeft="44dp"
-            android:layout_marginStart="44dp"
-            android:layout_marginTop="48dp"
+            android:layout_marginLeft="52dp"
+            android:layout_marginStart="52dp"
+            android:layout_marginTop="32dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            imageUrl="@{itemGroupViewModel.imageURl}"
-            app:layout_constraintVertical_bias="0.045" />
-</android.support.constraint.ConstraintLayout>
+            app:layout_constraintVertical_bias="0.3" />
+    </android.support.constraint.ConstraintLayout>
 </layout>
