made background white in layoutfiles not in layout tag

--- a/app/src/main/res/layout/fragment_events_in_category.xml
+++ b/app/src/main/res/layout/fragment_events_in_category.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white">
+    xmlns:tools="http://schemas.android.com/tools">
 
 
     <android.support.v7.widget.RecyclerView
-            android:id="@+id/eventsInCategoryEventRV"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/twoFragmentHeight"
-            tools:listitem="@layout/item_event">
+        android:id="@+id/eventsInCategoryEventRV"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/twoFragmentHeight"
+        android:background="@color/white"
+        tools:listitem="@layout/item_event">
 
         </android.support.v7.widget.RecyclerView>
 
