--- a/app/src/main/res/layout/fragment_group_feed.xml
+++ b/app/src/main/res/layout/fragment_group_feed.xml
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white">
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -15,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/oneFragmentHeight"
         android:orientation="vertical"
+        android:background="@color/white"
         tools:context=".mvvm.View.GroupFeedFragment">
 
         <android.support.constraint.ConstraintLayout
