--- a/app/src/main/res/layout/fragment_user_search_result.xml
+++ b/app/src/main/res/layout/fragment_user_search_result.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white">
+    xmlns:tools="http://schemas.android.com/tools">
 
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/userSearchResultUserRV"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/searchResultHeight"
-            tools:listitem="@layout/item_user">
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/userSearchResultUserRV"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/searchResultHeight"
+        android:background="@color/white"
+        tools:listitem="@layout/item_user">
 
-        </android.support.v7.widget.RecyclerView>
+    </android.support.v7.widget.RecyclerView>
 
 </layout>
