--- a/app/src/main/res/layout/fragment_group_search_result.xml
+++ b/app/src/main/res/layout/fragment_group_search_result.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white">
-
+    xmlns:tools="http://schemas.android.com/tools">
         <android.support.v7.widget.RecyclerView
             android:id="@+id/groupSearchResultGroupRV"
             android:layout_width="match_parent"
             android:layout_height="@dimen/searchResultHeight"
+            android:background="@color/white"
             tools:listitem="@layout/item_group">
 
         </android.support.v7.widget.RecyclerView>
