--- a/app/src/main/res/layout/fragment_my_groups.xml
+++ b/app/src/main/res/layout/fragment_my_groups.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white">
+    xmlns:tools="http://schemas.android.com/tools">
 
 
     <LinearLayout
-    android:layout_width="match_parent"
+        android:layout_width="match_parent"
         android:layout_height="@dimen/twoFragmentHeight"
-    android:orientation="vertical">
+        android:background="@color/white"
+        android:orientation="vertical">
 
 
     <android.support.v7.widget.RecyclerView
