--- a/app/src/main/res/layout/fragment_new_group_in_category.xml
+++ b/app/src/main/res/layout/fragment_new_group_in_category.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/white">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <data>
@@ -13,7 +12,8 @@
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/oneFragmentHeight">
+        android:layout_height="@dimen/oneFragmentHeight"
+        android:background="@color/white">
 
 
         <Button
@@ -41,6 +41,7 @@
             android:layout_marginTop="40dp"
             android:hint="@string/groupName"
             app:layout_constraintStart_toStartOf="parent"
+            android:inputType="text"
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
@@ -73,6 +74,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="@+id/newGroupInCategoryDescriptionET"
+            android:inputType="textUri"
             app:layout_constraintTop_toBottomOf="@+id/newGroupInCategoryDescriptionET" />
     </android.support.constraint.ConstraintLayout>
 </layout>
