--- a/app/src/main/res/layout/fragment_show_post.xml
+++ b/app/src/main/res/layout/fragment_show_post.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/white">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
 
@@ -13,7 +12,8 @@
     <android.support.constraint.ConstraintLayout
         android:id="@+id/item_post"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/itemRVHeight">
+        android:layout_height="@dimen/itemRVHeight"
+        android:background="@color/white">
 
 
         <ImageView
