--- a/app/src/main/res/layout/fragment_user_search_input.xml
+++ b/app/src/main/res/layout/fragment_user_search_input.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@color/white">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/searchInputHeight">
+        android:layout_height="@dimen/searchInputHeight"
+        android:background="@color/white">
 
         <Button
             android:id="@+id/userSearchInputButton"
@@ -33,10 +33,11 @@
             android:layout_marginBottom="8dp"
             android:layout_marginTop="8dp"
             android:gravity="center"
-            android:text="@string/userSearch"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
+            android:hint="@string/userSearch"
+            android:inputType="text"
             app:layout_constraintVertical_bias="0.454" />
     </android.support.constraint.ConstraintLayout>
 </layout>
