fixed margin top for layouts

--- a/app/src/main/res/layout/fragment_event_feed.xml
+++ b/app/src/main/res/layout/fragment_event_feed.xml
@@ -14,6 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/oneFragmentHeight"
         android:background="@color/white"
+        android:layout_marginTop="@dimen/toolbarHeight"
         android:orientation="vertical">
 
 
