--- a/app/src/main/res/layout/fragment_events_in_category.xml
+++ b/app/src/main/res/layout/fragment_events_in_category.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/twoFragmentHeight"
         android:background="@color/white"
+        android:layout_marginTop="305dp"
         tools:listitem="@layout/item_event">
 
         </android.support.v7.widget.RecyclerView>
