--- a/app/src/main/res/layout/fragment_categories_group.xml
+++ b/app/src/main/res/layout/fragment_categories_group.xml
@@ -16,6 +16,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="@dimen/toolbarHeight"
         tools:listitem="@layout/item_category">
 
     </android.support.v7.widget.RecyclerView>
