--- a/app/src/main/res/layout/fragment_group_search_result.xml
+++ b/app/src/main/res/layout/fragment_group_search_result.xml
@@ -6,6 +6,7 @@
             android:layout_width="match_parent"
             android:layout_height="@dimen/searchResultHeight"
             android:background="@color/white"
+            android:layout_marginTop="400dp"
             tools:listitem="@layout/item_group">
 
         </android.support.v7.widget.RecyclerView>
