--- a/app/src/main/res/layout/fragment_groups_in_category.xml
+++ b/app/src/main/res/layout/fragment_groups_in_category.xml
@@ -4,7 +4,8 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/twoFragmentHeight"
+        android:layout_marginTop="305dp"
         android:background="@color/white">
 
 
