--- a/app/src/main/res/layout/fragment_groups_in_subcategory.xml
+++ b/app/src/main/res/layout/fragment_groups_in_subcategory.xml
@@ -7,6 +7,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/oneFragmentHeight"
+        android:layout_marginTop="@dimen/toolbarHeight"
         android:background="@color/white">
 
 
