--- a/app/src/main/res/layout/fragment_new_group_in_category.xml
+++ b/app/src/main/res/layout/fragment_new_group_in_category.xml
@@ -13,6 +13,7 @@
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/oneFragmentHeight"
+        android:layout_marginTop="@dimen/toolbarHeight"
         android:background="@color/white">
 
 
