--- a/app/src/main/res/layout/fragment_new_user_post.xml
+++ b/app/src/main/res/layout/fragment_new_user_post.xml
@@ -11,6 +11,7 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/oneFragmentHeight"
+        android:layout_marginTop="@dimen/toolbarHeight"
         android:background="@color/white">
 
         <EditText
