--- a/app/src/main/res/layout/fragment_show_post.xml
+++ b/app/src/main/res/layout/fragment_show_post.xml
@@ -13,6 +13,7 @@
         android:id="@+id/item_post"
         android:layout_width="match_parent"
         android:layout_height="@dimen/itemRVHeight"
+        android:layout_marginTop="@dimen/toolbarHeight"
         android:background="@color/white">
 
 
