--- a/app/src/main/res/layout/fragment_user_search_result.xml
+++ b/app/src/main/res/layout/fragment_user_search_result.xml
@@ -8,6 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="@dimen/searchResultHeight"
         android:background="@color/white"
+        android:layout_marginTop="100dp"
         tools:listitem="@layout/item_user">
 
     </android.support.v7.widget.RecyclerView>
