--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -19,4 +19,5 @@
     <dimen name="searchInputButtonWidth">60dp</dimen>
     <dimen name="createInCatOrSubcategoryRVHeight">230dp</dimen>
     <dimen name="personalFeedRVHeight">470dp</dimen>
+    <dimen name="toolbarHeight">50dp</dimen>
 </resources>
