added post button in new event post, new group post and new user post

--- a/app/src/main/res/layout/fragment_new_event_post.xml
+++ b/app/src/main/res/layout/fragment_new_event_post.xml
@@ -14,12 +14,22 @@
         android:layout_marginTop="@dimen/toolbarHeight"
         android:background="@color/white">
 
+        <Button
+            android:id="@+id/button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:text="@string/post" />
+
         <EditText
             android:id="@+id/newEventPostET"
             android:layout_width="match_parent"
             android:layout_height="450dp"
-            android:layout_centerHorizontal="true"
-            android:layout_centerVertical="true"
+            android:layout_alignParentLeft="true"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
             android:gravity="center"
             android:hint="@string/typePost"
             android:inputType="textMultiLine"
