--- a/app/src/main/res/layout/fragment_events_in_subcategory.xml
+++ b/app/src/main/res/layout/fragment_events_in_subcategory.xml
@@ -10,15 +10,25 @@
         android:background="@color/white">
 
 
+        <TextView
+            android:id="@+id/eventsInSubcategoryCreateEventTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentRight="true"
+            android:layout_below="@+id/eventsInSubcategoryCreateEventIV"
+            android:text="@string/createEvent" />
+
         <ImageView
             android:id="@+id/eventsInSubcategoryCreateEventIV"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_above="@+id/eventsInSubcategoryEventRV"
             android:layout_alignParentEnd="true"
             android:layout_alignParentRight="true"
-            android:layout_marginEnd="14dp"
-            android:layout_marginRight="14dp"
+            android:layout_alignParentTop="true"
+            android:layout_marginEnd="57dp"
+            android:layout_marginRight="57dp"
+            android:layout_marginTop="13dp"
             app:srcCompat="@drawable/ic_baseline_create_24px"
             tools:layout_editor_absoluteX="344dp"
             tools:layout_editor_absoluteY="0dp" />
@@ -26,7 +36,7 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/eventsInSubcategoryEventRV"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/personalFeedRVHeight"
+            android:layout_height="430dp"
             android:layout_alignParentBottom="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true"
