--- a/app/src/main/res/layout/fragment_group_feed.xml
+++ b/app/src/main/res/layout/fragment_group_feed.xml
@@ -24,6 +24,22 @@
             android:background="@color/graylight">
 
             <TextView
+                android:id="@+id/groupFeedCreatePostTV"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="8dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_marginTop="8dp"
+                android:text="@string/createPost"
+                app:layout_constraintBottom_toTopOf="@+id/joinGroupBt"
+                app:layout_constraintEnd_toEndOf="@+id/createPostInGroupIV"
+                app:layout_constraintHorizontal_bias="0.38"
+                app:layout_constraintStart_toStartOf="@+id/createPostInGroupIV"
+                app:layout_constraintTop_toBottomOf="@+id/createPostInGroupIV"
+                app:layout_constraintVertical_bias="0.0" />
+
+            <TextView
                 android:id="@+id/memberInGroupTV"
                 android:layout_width="19dp"
                 android:layout_height="27dp"
