--- a/app/src/main/res/layout/fragment_personal_feed.xml
+++ b/app/src/main/res/layout/fragment_personal_feed.xml
@@ -4,12 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools">
 
 
-
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/oneFragmentHeight"
-        android:background="@color/white"
         android:layout_marginTop="@dimen/toolbarHeight"
+        android:background="@color/white"
         android:orientation="vertical">
 
 
@@ -22,18 +21,15 @@
             android:layout_marginRight="16dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/personalFeedPostRV"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/personalFeedCreatePostTV"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="1.0"
             app:srcCompat="@drawable/ic_baseline_create_24px" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/personalFeedPostRV"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/personalFeedRVHeight"
+            android:layout_height="430dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
@@ -44,6 +40,18 @@
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             tools:listitem="@layout/item_post" />
+
+        <TextView
+            android:id="@+id/personalFeedCreatePostTV"
+            android:layout_width="wrap_content"
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/createPost"
+            app:layout_constraintBottom_toTopOf="@+id/personalFeedPostRV"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/personalFeedCreatePostIV"
+            app:layout_constraintVertical_bias="0.0" />
 
     </android.support.constraint.ConstraintLayout>
 </layout>
