--- a/app/src/main/res/layout/fragment_subcategories_group.xml
+++ b/app/src/main/res/layout/fragment_subcategories_group.xml
@@ -11,27 +11,36 @@
         android:background="@color/white">
 
 
+        <TextView
+            android:id="@+id/subcategoriesGroupCreateGroupTV"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="16dp"
+            android:layout_marginRight="16dp"
+            android:text="@string/createGroup"
+            app:layout_constraintBottom_toTopOf="@+id/subcategoriesGroupSubcategoriesRV"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/newGroupInCategoryButton" />
+
         <ImageView
             android:id="@+id/newGroupInCategoryButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="16dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
-            android:layout_marginRight="16dp"
+            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
-            app:layout_constraintBottom_toTopOf="@+id/subcategoriesGroupSubcategoriesRV"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintStart_toStartOf="@+id/subcategoriesGroupCreateGroupTV"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@drawable/ic_baseline_create_24px" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/subcategoriesGroupSubcategoriesRV"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/createInCatOrSubcategoryRVHeight"
+            android:layout_height="190dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
