--- a/app/src/main/res/layout/fragment_event_feed.xml
+++ b/app/src/main/res/layout/fragment_event_feed.xml
@@ -57,7 +57,7 @@
                 android:layout_marginBottom="8dp"
                 android:layout_marginEnd="16dp"
                 android:layout_marginRight="16dp"
-                android:text="Button"
+                android:text="participate"
                 android:textSize="12sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
