--- a/app/src/main/res/layout/fragment_new_event_in_subcategory.xml
+++ b/app/src/main/res/layout/fragment_new_event_in_subcategory.xml
@@ -27,6 +27,7 @@
             android:layout_marginRight="140dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:onClick="@{()->itemSubcategoryViewModel.onCreateEventClick()}"
             android:text="@string/create"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -35,6 +36,7 @@
             app:layout_constraintTop_toBottomOf="@+id/newEventInSubcategoryDate" />
 
         <EditText
+            android:text="@={itemSubcategoryViewModel.inputName}"
             android:id="@+id/newEventInSubcategoryNameET"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -51,6 +53,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
+            android:text="@={itemSubcategoryViewModel.inputDesc}"
             android:id="@+id/newEventInSubcategoryDescriptionET"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -68,6 +71,7 @@
             app:layout_constraintTop_toBottomOf="@+id/newEventInSubcategoryNameET" />
 
         <EditText
+            android:text="@={itemSubcategoryViewModel.inputImageUrl}"
             android:id="@+id/newEventInSubcategoryImageUrlET"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -83,6 +87,7 @@
             app:layout_constraintTop_toBottomOf="@+id/newEventInSubcategoryDescriptionET" />
 
         <EditText
+            android:text="@={itemSubcategoryViewModel.inputDate}"
             android:id="@+id/newEventInSubcategoryDate"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
