--- a/app/src/main/res/layout/fragment_new_group_in_subcategory.xml
+++ b/app/src/main/res/layout/fragment_new_group_in_subcategory.xml
@@ -18,6 +18,7 @@
 
 
         <Button
+            android:onClick="@{()->itemSubcategoryViewModel.onCreateGroupClick()}"
             android:id="@+id/newGroupInSubcategoryButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -34,6 +35,7 @@
             app:layout_constraintTop_toBottomOf="@+id/newGroupInSubcategoryImageUrlET" />
 
         <EditText
+            android:text="@={itemSubcategoryViewModel.inputDate}"
             android:id="@+id/newGroupInSubcategoryNameET"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -50,6 +52,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
+            android:text="@={itemSubcategoryViewModel.inputDesc}"
             android:id="@+id/newGroupInSubcategoryDescriptionET"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -65,6 +68,7 @@
             app:layout_constraintTop_toBottomOf="@+id/newGroupInSubcategoryNameET" />
 
         <EditText
+            android:text="@={itemSubcategoryViewModel.inputImageUrl}"
             android:id="@+id/newGroupInSubcategoryImageUrlET"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
