--- a/app/src/main/res/layout/fragment_new_group_post.xml
+++ b/app/src/main/res/layout/fragment_new_group_post.xml
@@ -15,6 +15,7 @@
         android:background="@color/white">
 
         <Button
+            android:onClick="@{()->itemGroupViewModel.onCreatePostClick()}"
             android:id="@+id/button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -33,6 +34,6 @@
             android:gravity="center"
             android:hint="@string/typePost"
             android:inputType="textMultiLine"
-            android:text="@{}" />
+            android:text="@={itemGroupViewModel.textValue}" />
     </RelativeLayout>
 </layout>
