--- a/app/src/main/res/layout/fragment_subcategories_group.xml
+++ b/app/src/main/res/layout/fragment_subcategories_group.xml
@@ -35,19 +35,21 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/subcategoriesGroupCreateGroupTV"
             app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_bias="1.0"
             app:srcCompat="@drawable/ic_baseline_create_24px" />
 
         <android.support.v7.widget.RecyclerView
             android:id="@+id/subcategoriesGroupSubcategoriesRV"
             android:layout_width="match_parent"
-            android:layout_height="190dp"
+            android:layout_height="@dimen/createInCatOrSubcategoryRVHeight"
+            android:layout_marginBottom="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintHorizontal_bias="1.0"
             app:layout_constraintStart_toStartOf="parent"
             tools:listitem="@layout/item_subcategory" />
 
